[package]
name = "keynotes"
version = "0.1.0"
edition = "2018"
description = "Keynotes is a command line note keeping app. Notes are stored as key-value pairs organized into named sections"

[lib]
name = "keynotes"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aoutils = "0.1.0"
home = "0.5.3"
