[package]
name = "keynotes"
version = "0.1.0"
edition = "2018"
authors = ["Andrew O'Hara"]
keywords = ["config", "notes", "key-value", "key"]
categories = ["config", "data-structures", "filesystem", "command-line-utilities"]
description = "Keynotes is a command line note keeping app using the keydata library. Notes are stored as key-value pairs organized into named sections."
repository = "https://github.com/Andrew-OHara/keynotes"
homepage = "https://github.com/Andrew-OHara/keynotes"
readme = "readme.md"
license = "MIT"

[lib]
name = "keydata"
path = "src/lib.rs"

[dependencies]
aoutils = "0.1.1"
home = "0.5.3"
